namespace GoldMetrics.GoldCheck.Platform.AssetMaintenance.Domain.Model.Queries;

public record GetAllMachineryQuery();