namespace GoldMetrics.GoldCheck.Platform.AssetMaintenance.Domain.Model.Queries;

public record GetMachineryByIdQuery(string MachineryId);