namespace GoldMetrics.GoldCheck.Platform.AssetMaintenance.Domain.Model.Queries;

public record GetMaintenanceScheduleQuery(string MachineryId);